Closed Bug 458321 Opened 15 years ago Closed 15 years ago

Workers: Fix multipart to not use a cached variable

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.1b2

People

(Reporter: bent.mozilla, Assigned: bent.mozilla)

References

Details

Attachments

(1 file)

Attached patch Patch, v1Splinter Review
Simple fix, don't use a cached variable, always call the main thread.
Attachment #341550 - Flags: superreview?(jst)
Attachment #341550 - Flags: review?(jonas)
Attachment #341550 - Flags: superreview?(jst)
Attachment #341550 - Flags: superreview+
Attachment #341550 - Flags: review?(jonas)
Attachment #341550 - Flags: review+
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Component: DOM: Mozilla Extensions → DOM
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.