Bug 458321 - 'Workers: Fix multipart to not use a cached variable'. r+sr=jst.